--- a/section-multi.twig
+++ b/section-multi.twig
@@ -136,7 +136,13 @@
     {% endfor %}
 
 
-    <div class="j-keyword-cont" data-keywords="{{blogData.keywords}}"></div>
+    {% set theKeywords = '' %}
+    {% if blogData.keywords is defined and blogData.keywords != '' %}
+        {% set theKeywords = blogData.keywords %}
+    {% endif %}
+
+
+    <div id ="ad-keywords" class="j-keyword-cont" data-keywords="{{theKeywords}}"></div>
 </main><!-- .site-main -->
 
 
