--- a/section.twig
+++ b/section.twig
@@ -188,7 +188,7 @@
     {% endif %}
 
 
-    <div id ="ad-keywords" data-keywords="{{theKeywords}}"></div>
+    <div id ="ad-keywords" class="j-keyword-cont" data-keywords="{{theKeywords}}"></div>
 </main>
 
 <script>
