try changing account number?

--- a/layouts/main.twig
+++ b/layouts/main.twig
@@ -136,7 +136,8 @@
 
     <!-- Google AD Code here -->
     <script async='async' src='https://www.googletagservices.com/tag/js/gpt.js'></script>
-    <meta id="g-ad-id" data-accno="/268436641/">
+    {# <meta id="g-ad-id" data-accno="/268436641/"> #}
+    <meta id="g-ad-id" data-accno="/21719263119/">
     <!-- Google AD Code end -->
 
     {% if googleAnalyitcsId is defined and googleAnalyitcsId is not empty%}
