--- a/section.twig
+++ b/section.twig
@@ -187,8 +187,7 @@
         {% set theKeywords = blogData.keywords %}
     {% endif %}
 
-
-    <div id ="ad-keywords" class="j-keyword-cont" data-keywords="{{theKeywords}}"></div>
+    <div id ="ad-keywords" class="j-keyword-cont" data-keywords="{{theKeywords}}" data-pageName="" data-pageType="section" data-pageTags="" data-adsection=""></div>
 </main>
 
 <script>
