--- a/section.twig
+++ b/section.twig
@@ -172,11 +172,11 @@
                     {% endif %}
                 </section>
                 
-                {% if config['inventory']['adSpace']['banner'][1] is defined %}
+                {# {% if config['inventory']['adSpace']['banner'][1] is defined %}
                     <div class="my-5 overflow-hidden">
                         <div class="j-adslot" id="{{config['inventory']['adSpace']['banner'][1]}}" data-adshape="banner"></div>
                     </div>
-                {% endif %}
+                {% endif %} #}
             </div>
         </div>
     </div>
