--- a/static/sass/components/_component.article-gallery.scss
+++ b/static/sass/components/_component.article-gallery.scss
@@ -3,9 +3,9 @@
         margin-bottom: 20px;
         .article-gallery {
             &__caption {
-                position: absolute;
+                /* position: absolute;
                 left: 0;
-                bottom: 0;
+                bottom: 0; */
                 background-color: $black;
                 width: 100%;
 
