--- a/section.twig
+++ b/section.twig
@@ -162,6 +162,8 @@
 
                 {% endif %}
 
+                <section class="row mt-4" id="loadmore_section"></section>
+
                 <section class="loadmore__section my-5 text-center {{site}}">
                     {% if articles|length >= limit %}
                         {{ this.render('/partials/load_more.twig', {
