--- a/section-digital.twig
+++ b/section-digital.twig
@@ -5,6 +5,11 @@
 {% set config       = _Network.getThemeConfig() %}
 
 
+{{ set(this, 'params', {
+    "config": config,
+    "networkData": networkData
+}) }}
+
 
 {% set limit = 15 %}
 
