--- a/static/sass/components/_component.article-gallery.scss
+++ b/static/sass/components/_component.article-gallery.scss
@@ -2,6 +2,9 @@
     .gallery-container {
         margin-bottom: 20px;
         .article-gallery {
+            &__img {
+                display: block;
+            }
             &__caption {
                 /* position: absolute;
                 left: 0;
