--- a/layout-article-gallery.twig
+++ b/layout-article-gallery.twig
@@ -161,8 +161,7 @@
 {% endif %} 
 
 
-<main id="main" class="o-body-container o-body-container-md u-margin-top-60"
-    role="main" data-paywall-type="{{paywallType}}">
+<main id="main" class="o-body-container o-body-container-md u-margin-top-60" role="main" data-paywall-type="{{paywallType}}">
         
         <div class="c-article c-article-xs c-article__galleryView">
             <div class="container">
@@ -221,14 +220,25 @@
                                     <div class="j-adslot" id="{{config['inventory']['adSpace']['articleAd'][0]}}" data-adshape="articleAd"></div>
                                 </div>
                             {% endif %}
-                            <div class="c-article__main-content mt-5">
-                                <div class="c-article__container">
-                                    {{ ArticleContent | _resizeImages({'width': 600}) | raw }}
+
+                            <div class="{% if showPaywall == true %} c-article__main__paywall-container {% endif %}"> 
+                                <div class="row">
+                                    <div class="col-12">
+                                        <div class="c-article__main-content mt-5">
+                                            <div class="c-article__container">
+                                                {{ ArticleContent | _resizeImages({'width': 600}) | raw }}
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+
+            {% if showPaywall == true %}
+                {{this.render('partials/article/paywall_article_notice.twig', {networkData:networkData, paywallType:paywallType}) | raw}}
+            {% endif %}
         </div>
     </main>
