--- a/layout-article-gallery.twig
+++ b/layout-article-gallery.twig
@@ -161,7 +161,7 @@
 {% endif %} 
 
 
-<main id="main" class="o-body-container o-body-container-md u-margin-top-60" role="main" data-paywall-type="{{paywallType}}">
+<main id="main" class="o-body-container o-body-container-md u-margin-top-60 {% if showPaywall == true %} mb-0 {% endif %}" role="main" data-paywall-type="{{paywallType}}">
         
         <div class="c-article c-article-xs c-article__galleryView">
             <div class="container">
